Feat/Fix: CreateBookmark 모달생성, 이벤트 연속처리 해결

--- a/client/src/styles/sass/custom_popover_saveUI.scss
+++ b/client/src/styles/sass/custom_popover_saveUI.scss
@@ -47,6 +47,12 @@
     //     top:
     // }
 
+    & .popover-body {
+      ul {
+        border-top: none !important;
+      }
+    }
+
 
     & .bs-popover-top {
 
