Feat: 북마크 생성 모달창 완성 (아직 비동기 처리 연결 x)

--- a/client/src/styles/sass/custom_popover_saveUI.scss
+++ b/client/src/styles/sass/custom_popover_saveUI.scss
@@ -49,7 +49,7 @@
 
     & .popover-body {
       ul {
-        border-top: none !important;
+        // border-top: none !important;
       }
     }
 
