--- a/client/src/styles/sass/custom_modal_createbookmark.scss
+++ b/client/src/styles/sass/custom_modal_createbookmark.scss
@@ -106,6 +106,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: 100%; // Ensure `.modal-content` extends the full width of the parent `.modal-dialog`
     // counteract the pointer-events: none; in the .modal-dialog
     color: var(--#{$prefix}modal-color);
@@ -117,14 +118,17 @@
     @include box-shadow(var(--#{$prefix}modal-box-shadow));
     // Remove focus outline from opened modal
     outline: 0;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
   }
 
   // Modal background
   .modal-backdrop {
     // scss-docs-start modal-backdrop-css-vars
     --#{$prefix}backdrop-zindex: #{$zindex-modal-backdrop};
-    --#{$prefix}backdrop-bg: #{$modal-backdrop-bg};
-    --#{$prefix}backdrop-opacity: #{$modal-backdrop-opacity};
+    --#{$prefix}backdrop-bg: white;
+    // --#{$prefix}backdrop-bg: #{$modal-backdrop-bg};
+    --#{$prefix}backdrop-opacity: 80%;
+    // --#{$prefix}backdrop-opacity: #{$modal-backdrop-opacity};
     // scss-docs-end modal-backdrop-css-vars
 
     @include overlay-backdrop(var(--#{$prefix}backdrop-zindex), var(--#{$prefix}backdrop-bg), var(--#{$prefix}backdrop-opacity));
@@ -135,15 +139,20 @@
   .modal-header {
     display: flex;
     flex-shrink: 0;
+    justify-content: center;
     align-items: center;
-    justify-content: space-between; // Put modal header elements (title and dismiss) on opposite ends
+    font-size: var(--text-fontsize-title);
+    // font-weight: 300 !important;
+    // justify-content: space-between; // Put modal header elements (title and dismiss) on opposite ends
     padding: var(--#{$prefix}modal-header-padding);
-    border-bottom: var(--#{$prefix}modal-header-border-width) solid var(--#{$prefix}modal-header-border-color);
+    border: none;
+    // border-bottom: var(--#{$prefix}modal-header-border-width) solid var(--#{$prefix}modal-header-border-color);
     @include border-top-radius(var(--#{$prefix}modal-inner-border-radius));
 
     .btn-close {
         // color: black;
         // background: black;
+        display: none;
       padding: calc(var(--#{$prefix}modal-header-padding-y) * .5) calc(var(--#{$prefix}modal-header-padding-x) * .5);
       @include ltr-rtl-value-only("margin", calc(-.5 * var(--#{$prefix}modal-header-padding-y)) calc(-.5 * var(--#{$prefix}modal-header-padding-x)) calc(-.5 * var(--#{$prefix}modal-header-padding-y)) auto, calc(-.5 * var(--#{$prefix}modal-header-padding-y)) auto calc(-.5 * var(--#{$prefix}modal-header-padding-y)) calc(-.5 * var(--#{$prefix}modal-header-padding-x)));
     }
@@ -153,15 +162,21 @@
   .modal-title {
     margin-bottom: 0;
     line-height: var(--#{$prefix}modal-title-line-height);
+    font-size: var(--text-fontsize-title);
+    font-weight: var(--text-fontweight-medium);
   }
 
   // Modal body
   // Where all modal content resides (sibling of .modal-header and .modal-footer)
   .modal-body {
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    // position: relative;
     // Enable `flex-grow: 1` so that the body take up as much space as possible
     // when there should be a fixed height on `.modal-dialog`.
-    flex: 1 1 auto;
+    // flex: 1 1 auto;
+    justify-content: center;
+    align-items: center;
     padding: var(--#{$prefix}modal-padding);
   }
 
@@ -171,10 +186,13 @@
     flex-shrink: 0;
     flex-wrap: wrap;
     align-items: center; // vertically center
-    justify-content: flex-end; // Right align buttons with flex property because text-align doesn't work on flex items
+    justify-content: center;
+    font-size: 14px;
+    // justify-content: flex-end; // Right align buttons with flex property because text-align doesn't work on flex items
     padding: calc(var(--#{$prefix}modal-padding) - var(--#{$prefix}modal-footer-gap) * .5);
     background-color: var(--#{$prefix}modal-footer-bg);
-    border-top: var(--#{$prefix}modal-footer-border-width) solid var(--#{$prefix}modal-footer-border-color);
+    border: none;
+    // border-top: var(--#{$prefix}modal-footer-border-width) solid var(--#{$prefix}modal-footer-border-color);
     @include border-bottom-radius(var(--#{$prefix}modal-inner-border-radius));
 
     // Place margin between footer elements
