--- a/client/src/styles/sass/custom_popover_modal.scss
+++ b/client/src/styles/sass/custom_popover_modal.scss
@@ -104,6 +104,7 @@
 
 
 .popover_topnav{
+
   --#{$prefix}popover-bg: var(--color-default-navtooltip) !important;
   --#{$prefix}popover-border-color: var(--color-default-navtooltip) !important;
   --#{$prefix}popover-arrow-border: var(--color-default-navtooltip) !important;
@@ -161,6 +162,8 @@
 }
 
 .popover_saveUI_hover{
+  z-index: 1090;
+
   --#{$prefix}popover-bg: black !important;
   --#{$prefix}popover-border-color: black !important;
   --#{$prefix}popover-arrow-border: black !important;
